fix: highlight contrast increased

--- a/client/web/src/app/modules/platform/interaction/history/history.component.scss
+++ b/client/web/src/app/modules/platform/interaction/history/history.component.scss
@@ -14,13 +14,6 @@
   width: 16px;
 }
 
-.highlight {
-  background-color: var(--ion-color-light);
-  // background-color: var(--ion-color-primary);
-  // background-color: var(--ion-color-primary-shade);
-  // background-color: var(--ion-color-primary-tint);
-}
-
 @media (prefers-color-scheme: light) {
   #history-icon {
     background-image: url("../../../../../assets/icon/history_radio.svg");
@@ -28,6 +21,10 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  .highlight {
+    background-color: var(--ion-color-light-shade);
   }
 }
 
@@ -38,5 +35,9 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  .highlight {
+    background-color: var(--ion-color-light-tint);
   }
 }
